[package]
name = "tokio-task-pool"
version = "0.1.5"
authors = ["Serhij S. <div@altertech.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/alttch/tokio-task-pool"
description = "Task pool for Tokio Runtime"
readme = "README.md"
keywords = ["tokio", "task", "safe", "pool"]

[package.metadata.docs.rs]
features = ["log"]

[package.metadata.playground]
features = ["log"]

[dependencies]
log = { version = "0.4.20", optional = true }
tokio = { version = "1.32.0", features = ["full"] }
