[package]
name = "tokio-task-pool"
version = "0.1.7"
authors = ["Serhij S. <div@altertech.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/alttch/tokio-task-pool"
description = "Task pool for Tokio Runtime"
readme = "README.md"
keywords = ["tokio", "task", "safe", "pool"]

[package.metadata.docs.rs]
features = ["log", "tracing"]

[package.metadata.playground]
features = ["log", "tracing"]

[workspace.dependencies]
tokio = { version = "1.32.0", default-features = false }

[dependencies]
log = { version = "0.4.20", default-features = false , optional = true }
tokio = { workspace = true, default-features = false, features = ["rt", "sync", "time"] }
tracing = { version = "0.1.41", default-features = false , optional = true }

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = ["macros", "rt-multi-thread"] }
